Projeto/Compilador/tests/cases/error/T26.pas
program T26;
function F(x: integer): integer;
begin
  F := x;
end;
begin
  F(1);
end.
